# random_signal_generator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: Doxyfile
include/: random_signal_generator.h
include/random_signal_generator/: random_signal_generator.h
src/: impl.cpp  impl.h  main.cpp  random_signal_generator.cpp
